# infant-engagement

./: .gitignore  LICENSE  README.md  pyproject.toml
local/: __init__.py  baseline.py  hyperparam_sampling.py  img.py  loader.py  metrics.py  navigation.py  network_models.py  reliability.py  search.py  tensor_dataset.py  training.py  training_helper.py  transforms.py  util.py  video_dataset.py
local/attention_painting/: __init__.py  annotator.py  painting.py  timer.py
local/cli/: __init__.py  cli_helpers.py  pretty_cli.py
local/datasets/: __init__.py  linear_dataset.py  tensor_dataset.py  video_dataset.py
local/heatmap/: README.md  __init__.py  common.py  comparison.py  gradcam.py  guided_backprop.py  occlusion.py  vanilla_backprop.py  viz.py
local/types/: __init__.py  loader.py  scheduler.py  type_aliases.py
scripts/attention_comparison/: calculate_similarity_metrics.py  human_machine_reliability.py
scripts/data_processing/: bake_samples.py  calculate_metric_baselines.py  human_human_reliability.py  process_elan.py  process_videos.py  processed_elan_to_annotation_format.py  stratify_samples.py
scripts/human_attention/: annotator.ipynb  choose_snippets.py
scripts/machine_attention/: calculate_machine_attention.py
scripts/training/final/: local.sh  script.py
scripts/training/finetune_search/: distributed.sh  jobfile.sh  local.sh  script.py  unify.py
scripts/training/head_search/: local.sh  script.py
training/final/: local.sh  script.py
training/finetune_search/: distributed.sh  jobfile.sh  local.sh  script.py
training/head_search/: local.sh  script.py
