[tool.poetry]
name = "infant-engagement"
version = "0.1.0"
description = "Companion code for the ICMI'22 article 'End-to-End Learning and Analysis of Infant Engagement During Guided Play: Prediction and Explainability'"
authors = ["MarcFraile <marc.fraile.fabrega@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "local"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.0"
imageio = "^2.22.0"
imageio-ffmpeg = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
