[tool.poetry]
name = "infant-engagement"
version = "0.1.0"
description = "Companion code for the ICMI'22 article 'End-to-End Learning and Analysis of Infant Engagement During Guided Play: Prediction and Explainability'"
authors = ["MarcFraile <marc.fraile.fabrega@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "local"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp38-cp38-linux_x86_64.whl" }
tqdm = "^4.64.1"
matplotlib = "^3.6.0"
imageio = "^2.22.0"
imageio-ffmpeg = "^0.4.7"
seaborn = "^0.12.0"
opencv-python = "^4.6.0.66"
jupyter = "^1.0.0"
ipywidgets = "^8.0.2"
ipympl = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
